Bug 175803 - amarok crashes reproducibly, when holding ctrl and using the mouse wheel in the file browser
Summary: amarok crashes reproducibly, when holding ctrl and using the mouse wheel in t...
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: File Browser (show other bugs)
Version: 2.1-SVN
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Amarok Developers
URL:
Keywords:
: 187322 196321 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-11-21 22:30 UTC by Panagiotis Papadopoulos
Modified: 2009-12-09 11:29 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments
Crash when using Ctrl+Scrollwheel in file browser, using debug-package (16.78 KB, text/plain)
2009-03-16 20:34 UTC, Arne Schmitz
Details
Patch to fix the ctrl+wheel crash in the file browser (1.04 KB, patch)
2009-03-18 23:24 UTC, Valentin Rouet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Panagiotis Papadopoulos 2008-11-21 22:30:44 UTC
Version:            (using Devel)
OS:                Linux
Installed from:    Compiled sources

I just noticed a bug, that results in amarok crashing reproducibly:

* Click on the amarok file browser on the left side.
* Move the cursor into the file browser
* Press and hold CTRL and try scrolling with the mouse Wheel

The (rather long) Bactrace I got:

Anwendung: Amarok (amarok), Signal SIGSEGV
[Current thread is 0 (LWP 17456)]

Thread 17 (Thread 0xb22aeb90 (LWP 17457)):
#0  0xb7fb7424 in __kernel_vsyscall ()
#1  0xb7db8ee2 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb2ec97d1 in metronom_sync_loop () from /usr/lib/libxine.so.1

Thread 16 (Thread 0xb1a66b90 (LWP 17458)):
#0  0xb7fb7424 in __kernel_vsyscall ()
#1  0xb4f4aaf7 in poll () from /lib/libc.so.6
#2  0xb4e017e2 in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#3  0xb4e01b11 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#4  0xb7f3d4b7 in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#5  0xb7f155aa in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#6  0xb7f1576a in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#7  0xb7e39933 in QThread::exec () from /usr/lib/libQtCore.so.4
#8  0xb2f372c9 in Phonon::Xine::XineThread::run () from /usr/lib/kde4/plugins/phonon_backend/phonon_xine.so
#9  0xb7e3c790 in ?? () from /usr/lib/libQtCore.so.4
#10 0x0983ca20 in ?? ()
#11 0x00000000 in ?? ()

Thread 15 (Thread 0xb1265b90 (LWP 17461)):
#0  0xb1aa8e1b in ao_alsa_handle_event_thread () from /usr/lib/xine/plugins/1.24/xineplug_ao_out_alsa.so
#1  0x00000000 in ?? ()

Thread 14 (Thread 0xb0a22b90 (LWP 17462)):
#0  0xb7fb7424 in __kernel_vsyscall ()
#1  0xb7db8bb5 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb2edb664 in ao_loop () from /usr/lib/libxine.so.1
#3  0x00000000 in ?? ()

Thread 13 (Thread 0xaf447b90 (LWP 17464)):
#0  0xb7fb7424 in __kernel_vsyscall ()
#1  0xb7db8bb5 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xafac64f5 in os_event_wait_low () from /usr/lib/kde4/libamarok_collection-sqlcollection.so
#3  0xafac389d in os_aio_simulated_handle () from /usr/lib/kde4/libamarok_collection-sqlcollection.so
#4  0xafa881bd in fil_aio_wait () from /usr/lib/kde4/libamarok_collection-sqlcollection.so
#5  0xaf8f4158 in io_handler_thread () from /usr/lib/kde4/libamarok_collection-sqlcollection.so
#6  0xb7db5145 in start_thread () from /lib/libpthread.so.0
#7  0xb4f5463e in clone () from /lib/libc.so.6

Thread 12 (Thread 0xae12fb90 (LWP 17465)):
#0  0xb7fb7424 in __kernel_vsyscall ()
#1  0xb7db8bb5 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xafac64f5 in os_event_wait_low () from /usr/lib/kde4/libamarok_collection-sqlcollection.so
#3  0xafac389d in os_aio_simulated_handle () from /usr/lib/kde4/libamarok_collection-sqlcollection.so
#4  0xafa881bd in fil_aio_wait () from /usr/lib/kde4/libamarok_collection-sqlcollection.so
#5  0xaf8f4158 in io_handler_thread () from /usr/lib/kde4/libamarok_collection-sqlcollection.so
#6  0xb7db5145 in start_thread () from /lib/libpthread.so.0
#7  0xb4f5463e in clone () from /lib/libc.so.6

Thread 11 (Thread 0xad92eb90 (LWP 17466)):
#0  0xb7fb7424 in __kernel_vsyscall ()
#1  0xb7db8bb5 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xafac64f5 in os_event_wait_low () from /usr/lib/kde4/libamarok_collection-sqlcollection.so
#3  0xafac389d in os_aio_simulated_handle () from /usr/lib/kde4/libamarok_collection-sqlcollection.so
#4  0xafa881bd in fil_aio_wait () from /usr/lib/kde4/libamarok_collection-sqlcollection.so
#5  0xaf8f4158 in io_handler_thread () from /usr/lib/kde4/libamarok_collection-sqlcollection.so
#6  0xb7db5145 in start_thread () from /lib/libpthread.so.0
#7  0xb4f5463e in clone () from /lib/libc.so.6

Thread 10 (Thread 0xad12db90 (LWP 17467)):
#0  0xb7fb7424 in __kernel_vsyscall ()
#1  0xb7db8bb5 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xafac64f5 in os_event_wait_low () from /usr/lib/kde4/libamarok_collection-sqlcollection.so
#3  0xafac389d in os_aio_simulated_handle () from /usr/lib/kde4/libamarok_collection-sqlcollection.so
#4  0xafa881bd in fil_aio_wait () from /usr/lib/kde4/libamarok_collection-sqlcollection.so
#5  0xaf8f4158 in io_handler_thread () from /usr/lib/kde4/libamarok_collection-sqlcollection.so
#6  0xb7db5145 in start_thread () from /lib/libpthread.so.0
#7  0xb4f5463e in clone () from /lib/libc.so.6

Thread 9 (Thread 0xabc9cb90 (LWP 17469)):
#0  0xb7fb7424 in __kernel_vsyscall ()
#1  0xb4f4d751 in select () from /lib/libc.so.6
#2  0xafac694e in os_thread_sleep () from /usr/lib/kde4/libamarok_collection-sqlcollection.so
#3  0xaf8f0e4e in srv_lock_timeout_and_monitor_thread () from /usr/lib/kde4/libamarok_collection-sqlcollection.so
#4  0xb7db5145 in start_thread () from /lib/libpthread.so.0
#5  0xb4f5463e in clone () from /lib/libc.so.6

Thread 8 (Thread 0xab49bb90 (LWP 17470)):
#0  0xb7fb7424 in __kernel_vsyscall ()
#1  0xb4f4d751 in select () from /lib/libc.so.6
#2  0xafac694e in os_thread_sleep () from /usr/lib/kde4/libamarok_collection-sqlcollection.so
#3  0xaf8efeb6 in srv_error_monitor_thread () from /usr/lib/kde4/libamarok_collection-sqlcollection.so
#4  0xb7db5145 in start_thread () from /lib/libpthread.so.0
#5  0xb4f5463e in clone () from /lib/libc.so.6

Thread 7 (Thread 0xaac9ab90 (LWP 17471)):
#0  0xb7fb7424 in __kernel_vsyscall ()
#1  0xb7db8bb5 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xafac64f5 in os_event_wait_low () from /usr/lib/kde4/libamarok_collection-sqlcollection.so
#3  0xaf8ef162 in srv_master_thread () from /usr/lib/kde4/libamarok_collection-sqlcollection.so
#4  0xb7db5145 in start_thread () from /lib/libpthread.so.0
#5  0xb4f5463e in clone () from /lib/libc.so.6

Thread 6 (Thread 0xa89f1b90 (LWP 17477)):
#0  0xb7fb7424 in __kernel_vsyscall ()
#1  0xb7db8bb5 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb7e3d522 in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#3  0xb641d658 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned () from /usr/lib/libthreadweaver.so.4
#4  0xb64203fc in ThreadWeaver::WorkingHardState::waitForAvailableJob () from /usr/lib/libthreadweaver.so.4
#5  0xb641c23b in ThreadWeaver::WeaverImpl::waitForAvailableJob () from /usr/lib/libthreadweaver.so.4
#6  0xb64204fa in ThreadWeaver::WorkingHardState::applyForWork () from /usr/lib/libthreadweaver.so.4
#7  0xb641dbe3 in ThreadWeaver::WeaverImpl::applyForWork () from /usr/lib/libthreadweaver.so.4
#8  0xb641e4ce in ThreadWeaver::ThreadRunHelper::run () from /usr/lib/libthreadweaver.so.4
#9  0xb641eb0b in ThreadWeaver::Thread::run () from /usr/lib/libthreadweaver.so.4
#10 0xb7e3c790 in ?? () from /usr/lib/libQtCore.so.4
#11 0x0a22b988 in ?? ()
#12 0x00000000 in ?? ()

Thread 5 (Thread 0xa81f0b90 (LWP 17478)):
#0  0xb7fb7424 in __kernel_vsyscall ()
#1  0xb7db8bb5 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb7e3d522 in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#3  0xb641d658 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned () from /usr/lib/libthreadweaver.so.4
#4  0xb64203fc in ThreadWeaver::WorkingHardState::waitForAvailableJob () from /usr/lib/libthreadweaver.so.4
#5  0xb641c23b in ThreadWeaver::WeaverImpl::waitForAvailableJob () from /usr/lib/libthreadweaver.so.4
#6  0xb64204fa in ThreadWeaver::WorkingHardState::applyForWork () from /usr/lib/libthreadweaver.so.4
#7  0xb641dbe3 in ThreadWeaver::WeaverImpl::applyForWork () from /usr/lib/libthreadweaver.so.4
#8  0xb6420519 in ThreadWeaver::WorkingHardState::applyForWork () from /usr/lib/libthreadweaver.so.4
#9  0xb641dbe3 in ThreadWeaver::WeaverImpl::applyForWork () from /usr/lib/libthreadweaver.so.4
#10 0xb6420519 in ThreadWeaver::WorkingHardState::applyForWork () from /usr/lib/libthreadweaver.so.4
#11 0xb641dbe3 in ThreadWeaver::WeaverImpl::applyForWork () from /usr/lib/libthreadweaver.so.4
#12 0xb641e4ce in ThreadWeaver::ThreadRunHelper::run () from /usr/lib/libthreadweaver.so.4
#13 0xb641eb0b in ThreadWeaver::Thread::run () from /usr/lib/libthreadweaver.so.4
#14 0xb7e3c790 in ?? () from /usr/lib/libQtCore.so.4
#15 0x0a26dc50 in ?? ()
#16 0x00000000 in ?? ()

Thread 4 (Thread 0xa79efb90 (LWP 17480)):
#0  0xb7fb7424 in __kernel_vsyscall ()
#1  0xb7db8bb5 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb7e3d522 in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#3  0xb641d658 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned () from /usr/lib/libthreadweaver.so.4
#4  0xb64203fc in ThreadWeaver::WorkingHardState::waitForAvailableJob () from /usr/lib/libthreadweaver.so.4
#5  0xb641c23b in ThreadWeaver::WeaverImpl::waitForAvailableJob () from /usr/lib/libthreadweaver.so.4
#6  0xb64204fa in ThreadWeaver::WorkingHardState::applyForWork () from /usr/lib/libthreadweaver.so.4
#7  0xb641dbe3 in ThreadWeaver::WeaverImpl::applyForWork () from /usr/lib/libthreadweaver.so.4
#8  0xb6420519 in ThreadWeaver::WorkingHardState::applyForWork () from /usr/lib/libthreadweaver.so.4
#9  0xb641dbe3 in ThreadWeaver::WeaverImpl::applyForWork () from /usr/lib/libthreadweaver.so.4
#10 0xb6420519 in ThreadWeaver::WorkingHardState::applyForWork () from /usr/lib/libthreadweaver.so.4
#11 0xb641dbe3 in ThreadWeaver::WeaverImpl::applyForWork () from /usr/lib/libthreadweaver.so.4
#12 0xb641e4ce in ThreadWeaver::ThreadRunHelper::run () from /usr/lib/libthreadweaver.so.4
#13 0xb641eb0b in ThreadWeaver::Thread::run () from /usr/lib/libthreadweaver.so.4
#14 0xb7e3c790 in ?? () from /usr/lib/libQtCore.so.4
#15 0x0a1937d0 in ?? ()
#16 0x00000000 in ?? ()

Thread 3 (Thread 0xa71eeb90 (LWP 17481)):
#0  0xb7fb7424 in __kernel_vsyscall ()
#1  0xb7db8bb5 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb7e3d522 in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#3  0xb641d658 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned () from /usr/lib/libthreadweaver.so.4
#4  0xb64203fc in ThreadWeaver::WorkingHardState::waitForAvailableJob () from /usr/lib/libthreadweaver.so.4
#5  0xb641c23b in ThreadWeaver::WeaverImpl::waitForAvailableJob () from /usr/lib/libthreadweaver.so.4
#6  0xb64204fa in ThreadWeaver::WorkingHardState::applyForWork () from /usr/lib/libthreadweaver.so.4
#7  0xb641dbe3 in ThreadWeaver::WeaverImpl::applyForWork () from /usr/lib/libthreadweaver.so.4
#8  0xb641e4ce in ThreadWeaver::ThreadRunHelper::run () from /usr/lib/libthreadweaver.so.4
#9  0xb641eb0b in ThreadWeaver::Thread::run () from /usr/lib/libthreadweaver.so.4
#10 0xb7e3c790 in ?? () from /usr/lib/libQtCore.so.4
#11 0x0a194f38 in ?? ()
#12 0x00000000 in ?? ()

Thread 2 (Thread 0xa5a50b90 (LWP 17488)):
#0  0xb7fb7424 in __kernel_vsyscall ()
#1  0xb7db8ee2 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb7e3d4fc in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#3  0xb7e33a66 in ?? () from /usr/lib/libQtCore.so.4
#4  0x0a2d69e0 in ?? ()
#5  0x0a2d69dc in ?? ()
#6  0x00007530 in ?? ()
#7  0xb7f0d020 in QAbstractEventDispatcher::QAbstractEventDispatcher () from /usr/lib/libQtCore.so.4
#8  0xb7e3c790 in ?? () from /usr/lib/libQtCore.so.4
#9  0x0a9e3e58 in ?? ()
#10 0x00000000 in ?? ()

Thread 1 (Thread 0xb4722710 (LWP 17456)):
[KCrash Handler]
#6  0xb7a85130 in KConfigGroup::writeEntry () from /usr/lib/libkdecore.so.5
#7  0xb7a859f1 in KConfigGroup::writeEntry () from /usr/lib/libkdecore.so.5
#8  0xb6458b56 in KDirOperator::setIconsZoom () from /usr/lib/libkfile.so.4
#9  0xb6458d51 in KDirOperator::eventFilter () from /usr/lib/libkfile.so.4
#10 0xb7f1604a in QCoreApplicationPrivate::sendThroughObjectEventFilters () from /usr/lib/libQtCore.so.4
#11 0xb52810ba in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#12 0xb5288471 in QApplication::notify () from /usr/lib/libQtGui.so.4
#13 0xb74c1b0d in KApplication::notify () from /usr/lib/libkdeui.so.5
#14 0xb7f16e41 in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#15 0xb52d9b88 in ?? () from /usr/lib/libQtGui.so.4
#16 0xbfad1e10 in ?? ()
#17 0x0a21bf68 in ?? ()
#18 0xbfad14ac in ?? ()
#19 0x00000078 in ?? ()
#20 0xbfad14f4 in ?? ()
#21 0xbfad14f0 in ?? ()
#22 0x00000002 in ?? ()
#23 0xb4c7e8aa in xcb_xlib_unlock () from /usr/lib/libxcb-xlib.so.0
#24 0xb52e60b5 in ?? () from /usr/lib/libQtGui.so.4
#25 0x097ed638 in ?? ()
#26 0x000000c8 in ?? ()
#27 0x0000024f in ?? ()
#28 0x00000078 in ?? ()
#29 0xbfad1718 in ?? ()
#30 0xbfad1714 in ?? ()
#31 0x00000002 in ?? ()
#32 0xb7f1b689 in QMetaObject::cast () from /usr/lib/libQtCore.so.4
#33 0xb52e5175 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#34 0xb530a812 in ?? () from /usr/lib/libQtGui.so.4
#35 0xbfad1e10 in ?? ()
#36 0xbfad1b5c in ?? ()
#37 0x00000000 in ?? ()
Comment 1 Seb Ruiz 2008-11-21 23:55:57 UTC
I can't reproduce this. You're backtrace is also useless, please install the amarok-debug package and run with --nofork. If you can reliably reproduce and get a good backtrace then reopen.
Comment 2 Kevin Funk 2009-03-16 20:21:52 UTC
*** Bug 187322 has been marked as a duplicate of this bug. ***
Comment 3 Arne Schmitz 2009-03-16 20:32:12 UTC
Haha... Very funny to shove me on a closed bug. :) Ok, however I can give Mr. Ruiz what he asked for! I have installed the 200 MB debug-package, and reliably crashed Amarok once again. This works every time by the way... The backtrace will be attached.
Comment 4 Arne Schmitz 2009-03-16 20:32:29 UTC
Haha... Very funny to shove me on a closed bug. :) Ok, however I can give Mr. Ruiz what he asked for! I have installed the 200 MB debug-package, and reliably crashed Amarok once again. This works every time by the way... The backtrace will be attached.
Comment 5 Arne Schmitz 2009-03-16 20:34:48 UTC
Created attachment 32170 [details]
Crash when using Ctrl+Scrollwheel in file browser, using debug-package
Comment 6 Mark Kretschmann 2009-03-16 20:38:59 UTC
Thanks Arne, I'm reopening the report.

I will probably try to fix this by simply "eating" the event (so that nothing happens), as I can't see an obvious reason for this crash.
Comment 7 Seb Ruiz 2009-03-17 00:52:32 UTC
#6  0xb6d07450 in KConfigGroup::writeEntry (this=0x0, key=0xb5ecf30d "listViewIconSize", value=@0xbfebe254, flags={i = -1075060276}) at /usr/include/QtCore/qshareddata.h:123
#7  0xb6d07d11 in KConfigGroup::writeEntry (this=0x0, key=0xb5ecf30d "listViewIconSize", value=@0xbfebe290, flags={i = -1075060060})
    at /usr/src/debug/kdelibs-4.2.1/kdecore/config/kconfiggroup.cpp:1118
#8  0xb5e88340 in KDirOperator::setIconsZoom (this=0x8ad26f8, _value=10) at /usr/src/debug/kdelibs-4.2.1/kdecore/config/kconfiggroup.h:753
#9  0xb5e88541 in KDirOperator::eventFilter (this=0x8ad26f8, watched=0x8af9258, event=0x0) at /usr/src/debug/kdelibs-4.2.1/kfile/kdiroperator.cpp:1359
#10 0xb6b40b3a in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#11 0xb6ffa8da in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4


All signs point to KDE libs...
Comment 8 Valentin Rouet 2009-03-18 23:24:47 UTC
Created attachment 32243 [details]
Patch to fix the ctrl+wheel crash in the file browser

I added the eventFilter function to the class MyDirOperator, in order to ignore the wheel events.
Comment 9 Mark Kretschmann 2009-03-19 08:04:38 UTC
SVN commit 941219 by markey:

Fix crash when using ctrl+mousewheel on Files browser. Patch by Valentin
Rouet <v.rouet@gmail.com>. Thanks :)

PS: This patch is more a workaround for a KDElibs (?) bug. It does not
fix the zooming that should happen, but just ignores the event. We
should probably remove it at some later point.

BUG: 175803

 M  +3 -1      ChangeLog  
 M  +9 -0      src/browsers/filebrowser/MyDirOperator.cpp  
 M  +3 -0      src/browsers/filebrowser/MyDirOperator.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=941219
Comment 10 Mark Kretschmann 2009-03-19 08:16:01 UTC
SVN commit 941220 by markey:

Make the Files browser not ignore the mouse wheel completely, but only
when CTRL is pressed too.

CCBUG: 175803

 M  +4 -1      MyDirOperator.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=941220
Comment 11 Mark Kretschmann 2009-06-13 13:14:05 UTC
*** Bug 196321 has been marked as a duplicate of this bug. ***
Comment 12 Panagiotis Papadopoulos 2009-06-15 16:48:36 UTC
I just discovered, that zooming in the file browser actually works if CTRL and Shift are pressed while moving the mousewheel.
Comment 13 Syam 2009-06-16 02:46:36 UTC
Nopes. It doesn't work with Amarok 2.0.2 on KDE 4.2.3 on Fedora 11. Ctrl+Shift+Scroll also crashes Amarok. I guess this is fixed only in Amarok 2.1.
Comment 14 Myriam Schweingruber 2009-06-16 12:58:58 UTC
(In reply to comment #13)
> Nopes. It doesn't work with Amarok 2.0.2 on KDE 4.2.3 on Fedora 11.
> Ctrl+Shift+Scroll also crashes Amarok. I guess this is fixed only in Amarok
> 2.1.

Syam, this bug report is about Amarok 2.1. You really should update your copy, see here: http://www.kubuntu.org/news/amarok-2.1 for informations on how to upgrade.
Comment 15 Syam 2009-06-18 04:20:47 UTC
(In reply to comment #14)
> Syam, this bug report is about Amarok 2.1. You really should update your copy,

I've just updated Amarok to 2.1 (from Fedora 11 updates) and Ctrl+Scroll *does not* crash (it doesn't do anything).
But Ctrl+Shift+Scroll *crashes* amarok.

> see here: http://www.kubuntu.org/news/amarok-2.1 for informations on how to
> upgrade.
Kubuntu? I'm on Fedora.
Comment 16 Mark Kretschmann 2009-06-18 10:08:08 UTC
SVN commit 983382 by markey:

Also don't crash if mouse wheel + control key + another keyboard modifier is
used in file browser.

BUG: 175803

 M  +1 -1      MyDirOperator.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=983382