Fix crash when using ctrl+mousewheel on Files browser. Patch by Valentin Rouet <v.rouet@gmail.com>. Thanks :)

PS: This patch is more a workaround for a KDElibs (?) bug. It does not
fix the zooming that should happen, but just ignores the event. We
should probably remove it at some later point.

BUG: 175803

svn path=/trunk/extragear/multimedia/amarok/; revision=941219